<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.TopupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texttopupamount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textTopupAmount" />

        <EditText
            android:id="@+id/editMinAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textMinTopup"
            android:inputType="number"
            android:maxLength="5" />

        <TextView
            android:id="@+id/textcardnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textCardNumber" />

        <EditText
            android:id="@+id/editCardNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Card Number"
            android:inputType="number"
            android:maxLength="16"/>

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textExpiryDate" />

        <EditText
            android:id="@+id/editExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="MM/YY"
            android:inputType="date"
            android:maxLength="4"  />

        <TextView
            android:id="@+id/textcvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textCVV" />

        <EditText
            android:id="@+id/editCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CVV"
            android:maxLength="3"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/checkSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSave" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textSubmit" />

    </LinearLayout>

</RelativeLayout>