<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:orientation="vertical"
    tools:context=".View.Activities.TransactionConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/textTransCon"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/textTransID"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/transactionID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="yymmdd0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textTo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/To"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Smart Dreser" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textTransDescription"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/transDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Topup" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/transAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RM 0.00" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/textSubmit"
                style="@style/buttonStyle"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cancel"
                style="@style/buttonStyle"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
    <tarc.edu.prototype.Animation.SuccessLoadingView
        android:id="@+id/success_loading_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"/>
</RelativeLayout>